# autovala

./: AUTHORS  CMakeLists.txt  HISTORY.md  INSTALL.md  INSTALL.txt  PKGBUILD  README.md  TODO  autovala.avprj  meson.build  meson_options.txt  test.avprj  uncrustify.cfg
autovala-atom/: CHANGELOG.md  README.md  TODO  package.json
autovala-atom/grammars/: autovala.cson
autovala-atom/lib/: autovala-atom.coffee  treeview.coffee
autovala-atom/spec/: autovala-atom-spec.coffee
autovala-atom/styles/: icons.less
autovala_gedit/: CMakeLists.txt  autovala_gedit.avprj
autovala_gedit/data/: AutoVala_gedit.plugin  CMakeLists.txt
autovala_gedit/data/interface/: CMakeLists.txt
autovala_gedit/data/local/: CMakeLists.txt
autovala_gedit/po/: CMakeLists.txt  POTFILES.in  es.po
autovala_gedit/src/: AutoVala_gedit.pc  CMakeLists.txt  Config.vala.cmake  autovala_gedit.vala
cmake/: ValaVersion.cmake
data/: CMakeLists.txt  autovala.appdata.xml  com.rastersoft.autovala.metainfo.xml  extras.gresource.xml
data/bash_completion/: CMakeLists.txt  autovala
data/cmake/: CMakeLists.txt
data/debian/: CMakeLists.txt  rules
data/interface/: CMakeLists.txt  ask_to_continue.ui  binary_properties.ui  new_project.ui
data/local/: CMakeLists.txt
data/pixmaps/: CMakeLists.txt
debian/: changelog  control  files  rules
doc/: CMakeLists.txt  Home  Keeping-your-changes  Project-File-Format  Rules  To-Do  Using-Autovala  autovala-fileformat.5  autovala-keep-changes.7  autovala-modifying.7  autovala-rules.7  autovala-tricks.7  autovala.1  index.html  plugins.1  tricks  versions  view.css
gedit_plugin/: CMakeLists.txt  HISTORY.md  PKGBUILD  README.md  autovala_gedit.avprj  gedit_plugin.avprj  valaplugin.avprj
gedit_plugin/AUR/: PKGBUILD
gedit_plugin/data/: CMakeLists.txt  autovala.plugin
gedit_plugin/data/interface/: CMakeLists.txt
gedit_plugin/data/local/: CMakeLists.txt
gedit_plugin/data/pixmaps/: CMakeLists.txt
gedit_plugin/debian/: changelog  control  rules
gedit_plugin/doc/: CMakeLists.txt
gedit_plugin/po/: CMakeLists.txt  POTFILES.in  es.po  es.po~  gedit_plugin.pot  valaplugin.pot
gedit_plugin/rpmbuild/SPECS/: gedit_plugin.spec
gedit_plugin/src/: AutovalaGeditPlugin.pc  CMakeLists.txt  Config.vala.base  Config.vala.cmake  autovalagedit.deps  autovalagedit.pc  gedit_plugin.vala  valaplugin.pc  valaplugin.vala
gedit_plugin/src/vapis/: gedit.vapi
meson_scripts/: check_path.sh  install_autovalaLib.sh  install_autovalaPlugin.sh  install_data.sh  install_library.sh  install_manpage.sh
po/: CMakeLists.txt  POTFILES.in  autovala.pot  es.po  meson.build  untitled.pot
rpmbuild/SPECS/: autovala.spec
scratch_plugin/: CMakeLists.txt  README.md  scratch_plugin.avprj
scratch_plugin/cmake/: FindVala.cmake~
scratch_plugin/data/: CMakeLists.txt  autovalascratch.plugin
scratch_plugin/data/local/: CMakeLists.txt
scratch_plugin/doc/: CMakeLists.txt
scratch_plugin/po/: CMakeLists.txt  POTFILES.in  es.po  scratch_plugin.pot
scratch_plugin/src/: CMakeLists.txt  Config.vala.cmake  autovalascratch.deps  autovalascratch.pc  scratch_plugin.vala
src/: CMakeLists.txt  autovala.vala  cmake.vala  configuration.vala  generate.vala  meson.build
src/autovalaLib/: AutoVala.deps  AutoVala.pc  CMakeLists.txt  Config.vala.cmake  autovalaLib.vala  conditionalText.vala  configuration.vala  elementAppData.vala  elementBDepend.vala  elementBase.vala  elementBashCompletion.vala  elementBinary.vala  elementCustom.vala  elementDBus.vala  elementDBusConf.vala  elementData.vala  elementDefine.vala  elementDesktop.vala  elementDoc.vala  elementEosPlug.vala  elementExternal.vala  elementGResource.vala  elementGlade.vala  elementGlobal.vala  elementIcon.vala  elementIgnore.vala  elementInclude.vala  elementManpage.vala  elementMimetype.vala  elementPixmap.vala  elementPo.vala  elementPolkit.vala  elementSDepend.vala  elementScheme.vala  elementTranslation.vala  elementValaBinary.vala  elementVapidir.vala  findVala.vala  genVapis.vala  globals.vala  (+8 more)
src/autovalaLib/unitests/: test1.vala
src/autovalaPlugin/: AutovalaPlugin.deps  AutovalaPlugin.pc  CMakeLists.txt  Config.vala.base  Config.vala.cmake  CreateNewProject.vala  PanedPercentage.vala  ProjectProperties.vala  ProjectViewerMenu.vala  actionbuttons.vala  fileview.vala  meson.build  outputview.vala  projectview.vala  searchview.vala
src/autovala_lib/: AutoVala.pc  CMakeLists.txt  Config.vala.cmake  autovalaLib.vala  cmake.vala  conditional_text.vala  configuration.vala  elementBase.vala  elementBinary.vala  elementCustom.vala  elementDBus.vala  elementData.vala  elementDefine.vala  elementDesktop.vala  elementDoc.vala  elementEosPlug.vala  elementGlade.vala  elementGlobal.vala  elementIcon.vala  elementIgnore.vala  elementInclude.vala  elementManpage.vala  elementPixmap.vala  elementPo.vala  elementScheme.vala  elementValaBinary.vala  gen_pkgconfig.vala  gen_vapis.vala  generate.vala  globals.vala
src/gedit_plugin/: AutoVala_gedit.pc  CMakeLists.txt  plugin.vala
src_old/: cmake.vala  conditional_text.vala  generate.vala
wiki/: CMakeLists.txt  Home.md  Keeping-your-changes.md  Project-File-Format.md  Rules.md  To-Do.md  Using-Autovala.md  autovala-fileformat.5.md  autovala-keep-changes.7.md  autovala-rules.7.md  autovala-tricks.7.md  autovala.1.md  convert.sh  footer.html  header.html  index.html.md  plugins.1.md  t1  tricks.md  versions.md
